[package]
name = "acc"
version = "0.1.0"
authors = ["Takachiha <akimoto14301@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
clap = "2.33.0"
dirs = "2.0"
easy-scraper = "0.1"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.10", features = ["cookies"] }
tokio = { version = "0.2", features = ["full"] }
