[package]
name = "acc"
version = "1.1.1"
authors = ["Takachiha <akimoto14301@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Takachiha/acc"
description = "command for atcoder"
readme = "README.md"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
clap = "2.33.0"
dirs = "2.0"
termion = "*"
easy-scraper = "0.1"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.10", features = ["cookies"] }
tokio = { version = "0.2", features = ["full"] }
regex = "1"
notify = "4.0.15"
chrono = "0.4"
